fix(_slider.scss): aligned text to center on categorys cards

--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -9,6 +9,10 @@
   height: 60px;
 }
 
+.category-name {
+  text-align: center;
+}
+
 .glider-container {
   margin-top: 1.25rem;
   margin-inline: 1rem;
